Updated CV spelling mistakes and GPA

--- a/main.tex
+++ b/main.tex
@@ -30,13 +30,12 @@
         \textbf{Cell: } (661) 666-2009 \newline
         \textbf{Email: } \href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu} \newline
         \textbf{LinkedIn: } \href{https://www.linkedin.com/in/daj-2805/}{linkedin.com/in/daj-2805/} \newline
-        \textbf{Github: } \href{https://github.com/DJ-2805}{github.com/DJ-2805} \newline
-        \textbf{Physics GPA: } 3.25 } &
+        \textbf{Github: } \href{https://github.com/DJ-2805}{github.com/DJ-2805} } &
         \multicolumn{1}{p{1.5cm}}{\textbf{\vspace{Education}}}  &
             \multicolumn{1}{p{7.4cm}}{
             \textbf{University of California: Los Angeles 2019} \newline
             \textit{Degree:} B.S. Mathematics of Computation \newline
-            \textit{Minor} Geophysics and Planetary Physics \newline
+            \textit{Minor:} Geophysics and Planetary Physics \newline
             \textbf{College of the Canyons 2016} \newline
             \textit{Degrees:} Associates in Mathematics \newline 
             Associates in Physics} \\ \hline
@@ -68,7 +67,7 @@
         \multicolumn{3}{p{17cm}}{
         \textit{Tools:} Emacs, VIM, Jupyter, terminal \newline
         \textit{Advanced Knowledge:} Python, Fortran, \LaTeX \newline
-        \textit{Working Knowledge:} Matlab, Simulink, C/C++, Julia, Arduino, Microsoft Office \newline
+        \textit{Working Knowledge:} C/C++, Julia, Microsoft Office \newline
         \textit{Basic Knowledge:} Java, Assembly, Bash \newline
         \textit{Cloud-Based Technologies:} AWS, Docker \newline
         \textit{Other:} Soldering, Milling, Machining, Circuitry, ESD Safety
@@ -90,7 +89,7 @@
             \item Help maintain the web servers under the ITS department and fix any bugs that may arise
         \end{itemize}
         
-        \leftright{\textbf{Atmospheric and Oceanic Department}}{October 2019 - March 2020} \newline
+        \leftright{\textbf{Atmospheric and Oceanic Department}}{October 2019 - January 2020} \newline
         \textit{Title:} Student II Coding Assistant
         \begin{itemize}[noitemsep,nolistsep]
             \item assisting Professor Jasper Kok with translating his course from Matlab to Python
@@ -116,7 +115,7 @@
             \item cleaned up code and provided documentation on software that had none
         \end{itemize}
         
-        \leftright{\textbf{Gentle Ride Ambulance}}{May 2014 - Decemeber 2014} \newline
+        \leftright{\textbf{Gentle Ride Ambulance}}{May 2014 - December 2014} \newline
         \textit{Title:} EMT-B
         \begin{itemize}[noitemsep,nolistsep]
             \item Patient care such as vitals, assessments, medical interventions
@@ -136,7 +135,7 @@
         \begin{itemize}[noitemsep,nolistsep]
             \item Assisted machinist with pressure system repair
             \item Surveyed systems at other businesses
-            \item machiend fittings for pressure systems
+            \item machined fittings for pressure systems
             \item Learned machining and workshop environment
         \end{itemize}
         
@@ -170,7 +169,7 @@
         \textit{Skills Used:} Python, Arduino, Circuitry, Data Analysis
         \begin{itemize}[noitemsep,nolistsep]
             \item Calibrated muscle sensor to recognize EM pulses to turn on/off RC Car
-            \item Calibrated hand motion, so that accleration data would move the car in correct motion
+            \item Calibrated hand motion, so that acceleration data would move the car in correct motion
             \item Assisted in circuit design of RC Car and hookup of hardware to devices
         \end{itemize}
         
@@ -233,9 +232,9 @@
     \multicolumn{1}{p{2 cm}}{\textbf{Research \newline Experience}}  &
         \multicolumn{3}{p{16cm}}{
         \textbf{Rapid: Blue Dawn Post Launch Analysis} \newline
-        \leftright{\textit{Advisor:} Lydia Adair}{April 2019 - Present} \newline
+        \leftright{\textit{Advisor:} Lydia Adair, Emily Hawkins}{April 2019 - Present} \newline
         \textit{Project:} Analyze the magnetohydrodynamic design of Blue Dawn, and show that it is a sensible design \newline
-        \textit{Skills Used:} Python, Debugging, Documenation Writing, Soldering, Circuitry, Arduino, Lab testing
+        \textit{Skills Used:} Python, Debugging, Documentation Writing, Soldering, Circuitry, Arduino, Lab testing
         \begin{itemize}[noitemsep,nolistsep]
             \item Setup Arduino circuit to run pump and read values from flow meter
             \item Use Python interface to display values on screen to users to observe
@@ -245,7 +244,7 @@
         \textbf{Mineral Lab: APEx} \newline
         \leftright{\textit{Advisor:} Abby Kavner}{October 2019 - Present} \newline
         \textit{Project:} Extracts peak locations and ancillary information from an unrolled diffraction image. \newline
-        \textit{Skills Used:} Python, Debugging, Documenation Writing
+        \textit{Skills Used:} Python, Debugging, Documentation Writing
         \begin{itemize}[noitemsep,nolistsep]
             \item Switching Python 2.0 standard to Python 3.0 standard
             \item Allowing for more cases of images to be inputted and analyzed
@@ -254,7 +253,7 @@
         \textbf{SPIN Lab: DigiPyRo} \newline
         \leftright{\textit{Advisor:} Jon Aurnou}{July 2019 - Present} \newline
         \textit{Project:} Digitally rotates a movie and allows for single-particle tracking. Originally designed to intuitively show Coriolis force effects by the appearance of inertial circles when digitally rotating film of a ball oscillating on a parabolic surface. \newline
-        \textit{Skills Used:} Python, Debugging, Documenation Writing
+        \textit{Skills Used:} Python, Debugging, Documentation Writing
         \begin{itemize}[noitemsep,nolistsep]
             \item Switching Python 2.0 standard to Python 3.0 standard
             \item Debugging OpenCV package implemented in design
@@ -263,7 +262,7 @@
         \textbf{EPSS 199: Directed Research} \newline
         \leftright{\textit{Advisor:} Lars Stixrude}{June 2019 - August 2019} \newline
         \textit{Project:} Created a model that simulated a silicate planet's mass and radius with a initial parameters and equations \newline
-        \textit{Skills Used:} Python, Fortran, Debugging, Documenation Writing
+        \textit{Skills Used:} Python, Fortran, Debugging, Documentation Writing
         \begin{itemize}[noitemsep,nolistsep]
             \item Coded model in Fortran following modular design
             \item Used Python to visualize simulated points
@@ -273,7 +272,7 @@
         \textbf{URBN PL 199: Directed Research} \newline
         \leftright{\textit{Advisor:} Evelyn Blumenberg}{June 2019 - August 2019} \newline
         \textit{Project:} Compare the euclidean distance to the network distance of ordered pairs of 14 million home and work FIPS code destinations \newline
-        \textit{Skills Used:} Python, Debugging, docker, jupyter, Documenation Writing
+        \textit{Skills Used:} Python, Debugging, docker, jupyter, Documentation Writing
         \begin{itemize}[noitemsep,nolistsep]
             \item Used a docker container to run OSRM software to create a local map of California on the machine
             \item Paralleled Python code such that it can run the OD pairs efficiently
