Updated hyperlinks for DigiPyRo and UB 199

--- a/main.tex
+++ b/main.tex
@@ -250,7 +250,8 @@
             \item Allowing for more cases of images to be inputted and analyzed
         \end{itemize}
         
-        \textbf{SPIN Lab: DigiPyRo} \newline
+        \textbf{SPIN Lab: DigiPyRo -- 
+        \href{https://github.com/DJ-2805/DigiPyRo}{github.com/DJ-2805/DigiPyRo}} \newline
         \leftright{\textit{Advisor:} Jon Aurnou}{July 2019 - Present} \newline
         \textit{Project:} Digitally rotates a movie and allows for single-particle tracking. Originally designed to intuitively show Coriolis force effects by the appearance of inertial circles when digitally rotating film of a ball oscillating on a parabolic surface. \newline
         \textit{Skills Used:} Python, Debugging, Documentation Writing
@@ -269,7 +270,8 @@
             \item Collected observed data from NASA Exoplanet Database to compare
         \end{itemize}
         
-        \textbf{URBN PL 199: Directed Research} \newline
+        \textbf{URBN PL 199: Directed Research -- 
+        \href{https://github.com/ucla-its/network-commute-distance}{github.com/ucla-its/network-commute-distance}} \newline
         \leftright{\textit{Advisor:} Evelyn Blumenberg}{June 2019 - August 2019} \newline
         \textit{Project:} Compare the euclidean distance to the network distance of ordered pairs of 14 million home and work FIPS code destinations \newline
         \textit{Skills Used:} Python, Debugging, docker, jupyter, Documentation Writing
