updated links and cv

--- a/main.tex
+++ b/main.tex
@@ -29,8 +29,8 @@
         \textbf{Name:} David Abraham James \newline
         \textbf{Cell: } (661) 666-2009 \newline
         \textbf{Email: } \href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu} \newline
-        \textbf{LinkedIn: } \href{https://www.linkedin.com/in/daj-2805/}{linkedin.com/in/daj-2805/} \newline
-        \textbf{Github: } \href{https://github.com/DJ-2805}{github.com/DJ-2805} } &
+        \textbf{LinkedIn: } \href{https://www.linkedin.com/in/da-james/}{linkedin.com/in/da-james/} \newline
+        \textbf{Github: } \href{https://github.com/da-james}{github.com/da-james} } &
         \multicolumn{1}{p{1.5cm}}{\textbf{\vspace{Education}}}  &
             \multicolumn{1}{p{7.4cm}}{
             \textbf{University of California: Los Angeles 2019} \newline
@@ -152,7 +152,7 @@
             \item Test magneto-hydrodynamic pump extensively to ensure design was safe to fly 
         \end{itemize}
         
-        \textbf{DataFest 2019 -- \href{https://github.com/DJ-2805/dataFest2019}{https://github.com/DJ-2805/dataFest2019}} \newline
+        \textbf{DataFest 2019 -- \href{https://github.com/da-james/dataFest2019}{https://github.com/da-james/dataFest2019}} \newline
         \leftright{\textit{Title:} Data Analyst}{May 2019}  \newline
         \textit{Project:} Team developed a physical model to calculate when a rugby player experienced a tackle during a given game, and compared if it had an affect on players reporting scores \newline
         \textit{Skills Used:} Python, Data Analysis, Documentation Writing, Math Modeling
@@ -163,7 +163,7 @@
             \item created presentation for judges to see results
         \end{itemize}
         
-        \textbf{Idea Hacks 2019 -- \href{https://github.com/DJ-2805/muscleBot}{https://github.com/DJ-2805/muscleBot}} \newline
+        \textbf{Idea Hacks 2019 -- \href{https://github.com/da-james/muscleBot}{https://github.com/da-james/muscleBot}} \newline
         \leftright{\textit{Title:} Data Analyst}{January 2019} \newline
         \textit{Project:} Team designed a RC Car that moved based off of hand motion and muscle detection \newline
         \textit{Skills Used:} Python, Arduino, Circuitry, Data Analysis
@@ -173,7 +173,7 @@
             \item Assisted in circuit design of RC Car and hookup of hardware to devices
         \end{itemize}
         
-        \textbf{DataFest 2018 -- \href{https://github.com/DJ-2805/datafest2018}{https://github.com/DJ-2805/datafest2018}} \newline
+        \textbf{DataFest 2018 -- \href{https://github.com/da-james/datafest2018}{https://github.com/da-james/datafest2018}} \newline
         \leftright{\textit{Title:} Data Analyst}{May 2018}  \newline
         \textit{Project:} Team developed a machine learning algorithm to determine possible indicators of competitive job postings on indeed.com \newline
         \textit{Skills Used:} Python, Data Analysis, Documentation Writing
@@ -251,7 +251,7 @@
         \end{itemize}
         
         \textbf{SPIN Lab: DigiPyRo -- 
-        \href{https://github.com/DJ-2805/DigiPyRo}{github.com/DJ-2805/DigiPyRo}} \newline
+        \href{https://github.com/diynamics/digipyro}{github.com/diynamics/digipyro}} \newline
         \leftright{\textit{Advisor:} Jon Aurnou}{July 2019 - Present} \newline
         \textit{Project:} Digitally rotates a movie and allows for single-particle tracking. Originally designed to intuitively show Coriolis force effects by the appearance of inertial circles when digitally rotating film of a ball oscillating on a parabolic surface. \newline
         \textit{Skills Used:} Python, Debugging, Documentation Writing
