updated cv with phd info, and moved some sections around

--- a/main.tex
+++ b/main.tex
@@ -33,14 +33,14 @@
         \textbf{Github: } \href{https://github.com/da-james}{github.com/da-james} } &
         \multicolumn{1}{p{1.5cm}}{\textbf{\vspace{Education}}}  &
             \multicolumn{1}{p{7.4cm}}{
+            \textbf{University of California: Los Angeles 2025} \newline
+            M.S./Ph.D. Geophysics and Space Physics \newline
             \textbf{University of California: Los Angeles 2019} \newline
-            \textit{Degree:} B.S. Mathematics of Computation \newline
-            \textit{Minor:} Geophysics and Planetary Physics \newline
-            \textbf{College of the Canyons 2016} \newline
-            \textit{Degrees:} Associates in Mathematics \newline 
-            Associates in Physics} \\ \hline
-        
-    \multicolumn{1}{p{1.7 cm}}{\textbf{\vspace{Awards}}}    &                
+            B.S. Mathematics of Computation  with a \newline
+            Minor in Geophysics and Planetary Physics} \\ \hline
+
+    \multicolumn{1}{p{1.7cm}}{
+    \textbf{\vspace{Awards}}}    &                
     
         \multicolumn{3}{p{17cm}}{
         \textbf{NASA Space Grant Undergraduate Fellowship} \newline
@@ -56,15 +56,15 @@
         \multicolumn{1}{p{8cm}}{
         \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization, Algorithms \newline
         \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Lab experience, Documentation Writing}  &
-        \multicolumn{1}{p{2.3cm}}{\textbf{\vspace{Professional Orgs.}}} &
-            \multicolumn{1}{p{6cm}}{
-                Triangle Fraternity for Engineers, Architects, and Scientists \newline
-                Hermanos Unidos \newline
-                Mathematics, Engineering, Science, Achievement (MESA)
-                } \\
+        % \multicolumn{1}{p{2.3cm}}{\textbf{\vspace{Professional Orgs.}}} &
+        %     \multicolumn{1}{p{6cm}}{
+        %         Triangle Fraternity for Engineers, Architects, and Scientists \newline
+        %         Hermanos Unidos \newline
+        %         Mathematics, Engineering, Science, Achievement (MESA)
+        %         } \\
                 
     \multicolumn{1}{p{1.7cm}}{\textbf{Technical Skills}}   &
-        \multicolumn{3}{p{17cm}}{
+        \multicolumn{1}{p{7.4cm}}{
         \textit{Tools:} Emacs, VIM, Jupyter, terminal \newline
         \textit{Advanced Knowledge:} Python, Fortran, \LaTeX \newline
         \textit{Working Knowledge:} C/C++, Julia, Microsoft Office \newline
@@ -74,15 +74,23 @@
         } \\ \hline
     \multicolumn{1}{p{2 cm}}{\textbf{\vspace{Work \newline Experience}}} &
         \multicolumn{3}{p{16cm}}{
-        \leftright{\textbf{Simulated Planetary Interiors (SPIN) Lab}}{March 2019 - Present} \newline
-        \textit{Title:} Research Assistant
+        \leftright{\textbf{Jet Propulsion Laboratory (JPL)}}{June 2020 - September 2020} \newline
+        \textit{Title:} Student Intern
         \begin{itemize}[noitemsep,nolistsep]
-            \item assists with debugging software 
-            \item creates new documentation to streamline software use
-            \item assisting with translating coding classes from Matlab code to Python
+            \item assisted with debugging Julia simulation
+            \item created new documentation to streamline software use
+            \item added modules and functions to further the simulation
         \end{itemize}
         
-        \leftright{\textbf{Institute of Transportation}}{June 2018 - Present} \newline
+        \leftright{\textbf{Simulated Planetary Interiors (SPIN) Lab}}{March 2019 - June 2020} \newline
+        \textit{Title:} Research Assistant
+        \begin{itemize}[noitemsep,nolistsep]
+            \item assisted with debugging software 
+            \item created new documentation to streamline software use
+            \item assisted with translating coding classes from Matlab code to Python
+        \end{itemize}
+        
+        \leftright{\textbf{Institute of Transportation}}{June 2018 - June 2020} \newline
         \textit{Title:} IT Assistant
         \begin{itemize}[noitemsep,nolistsep]
             \item assisted in building computers for the ITS department along with setting up connections and machines for the Lewis Center
@@ -115,20 +123,20 @@
             \item cleaned up code and provided documentation on software that had none
         \end{itemize}
         
-        \leftright{\textbf{Gentle Ride Ambulance}}{May 2014 - December 2014} \newline
-        \textit{Title:} EMT-B
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Patient care such as vitals, assessments, medical interventions
-            \item Giving and taking medical history reports
-        \end{itemize}
+        % \leftright{\textbf{Gentle Ride Ambulance}}{May 2014 - December 2014} \newline
+        % \textit{Title:} EMT-B
+        % \begin{itemize}[noitemsep,nolistsep]
+        %     \item Patient care such as vitals, assessments, medical interventions
+        %     \item Giving and taking medical history reports
+        % \end{itemize}
         
-        \leftright{\textbf{Papa John's Pizza}}{May 2013 - April 2014} \newline
-        \textit{Title:} Assistant Manager
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Took orders and ran register in the store
-            \item Surveyed systems at other businesses
-            \item Closing the restaurant and stock counting
-        \end{itemize}
+        % \leftright{\textbf{Papa John's Pizza}}{May 2013 - April 2014} \newline
+        % \textit{Title:} Assistant Manager
+        % \begin{itemize}[noitemsep,nolistsep]
+        %     \item Took orders and ran register in the store
+        %     \item Surveyed systems at other businesses
+        %     \item Closing the restaurant and stock counting
+        % \end{itemize}
                 
         \leftright{\textbf{High Pressure Technologies LLC}}{May 2011 - July 2011} \newline
         \textit{Title:} Machine Shop Intern
@@ -139,7 +147,7 @@
             \item Learned machining and workshop environment
         \end{itemize}
         
-        \baselineskip} \\ \hline
+        \baselineskip} \\
     \multicolumn{1}{p{2 cm}}{\textbf{\vspace{Project \newline Experience}}} &
         \multicolumn{3}{p{16cm}}{
         \textbf{Rapid: Blue Dawn CubeSat Mission -- \href{http://bruinspace.com/projects/rapid.html}{http://bruinspace.com/projects/rapid.html}} \newline
@@ -228,7 +236,7 @@
             \item Constructed the apparatus by soldering a circuit together
         \end{itemize}
         
-        \baselineskip}  \\ \hline
+        \baselineskip}  \\
     \multicolumn{1}{p{2 cm}}{\textbf{Research \newline Experience}}  &
         \multicolumn{3}{p{16cm}}{
         \textbf{Rapid: Blue Dawn Post Launch Analysis} \newline
@@ -318,7 +326,7 @@
             \item Wrote budget proposals
         \end{itemize}
         
-        \baselineskip}  \\ \hline
+        \baselineskip}  \\
     
     \pagebreak
         
@@ -351,7 +359,18 @@
             \item assisted families around the event
         \end{itemize}
         
-        }
+        } \\
+    \multicolumn{1}{p{2cm}}{\textbf{Professional \newline Org.}}        &
+    
+        \multicolumn{3}{p{16cm}}{
+            Triangle Fraternity for Engineers, Architects, and Scientists \newline
+            Hermanos Unidos \newline
+            Mathematics, Engineering, Science, Achievement (MESA)
+        } \\
+    
+    \multicolumn{1}{p{2cm}}{\textbf{Interests}}         &
+        \multicolumn{3}{p{16cm}}{
+            Youtuber, salsa dancing, weight-training, Super Smash Bros.(Joker main)}
 \end{longtable}
 
 
