updated links and dates

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,8 @@
         \textbf{Cell: } (661) 666-2009 \newline
         \textbf{Email: } \href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu} \newline
         \textbf{LinkedIn: } \href{https://www.linkedin.com/in/da-james/}{linkedin.com/in/da-james/} \newline
-        \textbf{Github: } \href{https://github.com/da-james}{github.com/da-james} } &
+        \textbf{Github: } \href{https://github.com/da-james}{github.com/da-james} \newline
+        \textbf{Portfolio: } \href{https://da-james.github.io}{da-james.github.io}} &
         \multicolumn{1}{p{1.5cm}}{\textbf{\vspace{Education}}}  &
             \multicolumn{1}{p{7.4cm}}{
             \textbf{University of California: Los Angeles 2025} \newline
@@ -53,7 +54,7 @@
        \baselineskip } \\ \hline
     \multicolumn{1}{p{1.7cm}}{\textbf{Skills}}   &
     
-        \multicolumn{1}{p{8cm}}{
+        \multicolumn{1}{p{7cm}}{
         \textit{Applied Maths:} Mathematical Modeling, Numerical Methods, Optimization, Algorithms \newline
         \textit{Other:} Tutoring, Project Management, Staff Management, Public Speaking, Lab experience, Documentation Writing}  &
         % \multicolumn{1}{p{2.3cm}}{\textbf{\vspace{Professional Orgs.}}} &
@@ -64,12 +65,12 @@
         %         } \\
                 
     \multicolumn{1}{p{1.7cm}}{\textbf{Technical Skills}}   &
-        \multicolumn{1}{p{7.4cm}}{
-        \textit{Tools:} Emacs, VIM, Jupyter, terminal \newline
-        \textit{Advanced Knowledge:} Python, Fortran, \LaTeX \newline
-        \textit{Working Knowledge:} C/C++, Julia, Microsoft Office \newline
-        \textit{Basic Knowledge:} Java, Assembly, Bash \newline
-        \textit{Cloud-Based Technologies:} AWS, Docker \newline
+        \multicolumn{1}{p{8cm}}{
+        \textit{Tools:} Emacs, VIM, Jupyter, terminal, Docker \newline
+        \textit{Advanced Knowledge:} Python, Fortran, Julia \LaTeX \newline
+        \textit{Working Knowledge:} C/C++, Microsoft Office \newline
+        \textit{Basic Knowledge:} Assembly, Bash \newline
+        \textit{Cloud-Based Technologies:} AWS, GCP \newline
         \textit{Other:} Soldering, Milling, Machining, Circuitry, ESD Safety
         } \\ \hline
     \multicolumn{1}{p{2 cm}}{\textbf{\vspace{Work \newline Experience}}} &
@@ -240,7 +241,7 @@
     \multicolumn{1}{p{2 cm}}{\textbf{Research \newline Experience}}  &
         \multicolumn{3}{p{16cm}}{
         \textbf{Rapid: Blue Dawn Post Launch Analysis} \newline
-        \leftright{\textit{Advisor:} Lydia Adair, Emily Hawkins}{April 2019 - Present} \newline
+        \leftright{\textit{Advisor:} Lydia Adair, Emily Hawkins}{April 2019 - December 2019} \newline
         \textit{Project:} Analyze the magnetohydrodynamic design of Blue Dawn, and show that it is a sensible design \newline
         \textit{Skills Used:} Python, Debugging, Documentation Writing, Soldering, Circuitry, Arduino, Lab testing
         \begin{itemize}[noitemsep,nolistsep]
@@ -250,7 +251,7 @@
         \end{itemize}
         
         \textbf{Mineral Lab: APEx} \newline
-        \leftright{\textit{Advisor:} Abby Kavner}{October 2019 - Present} \newline
+        \leftright{\textit{Advisor:} Abby Kavner}{October 2019 - December 2019} \newline
         \textit{Project:} Extracts peak locations and ancillary information from an unrolled diffraction image. \newline
         \textit{Skills Used:} Python, Debugging, Documentation Writing
         \begin{itemize}[noitemsep,nolistsep]
@@ -258,8 +259,8 @@
             \item Allowing for more cases of images to be inputted and analyzed
         \end{itemize}
         
-        \textbf{SPIN Lab: DigiPyRo -- 
-        \href{https://github.com/diynamics/digipyro}{github.com/diynamics/digipyro}} \newline
+        \textbf{DIYnamics: DIYrotate -- 
+        \href{https://github.com/DIYnamics/DIYrotate}{https://github.com/DIYnamics/DIYrotate}} \newline
         \leftright{\textit{Advisor:} Jon Aurnou}{July 2019 - Present} \newline
         \textit{Project:} Digitally rotates a movie and allows for single-particle tracking. Originally designed to intuitively show Coriolis force effects by the appearance of inertial circles when digitally rotating film of a ball oscillating on a parabolic surface. \newline
         \textit{Skills Used:} Python, Debugging, Documentation Writing
@@ -279,7 +280,7 @@
         \end{itemize}
         
         \textbf{URBN PL 199: Directed Research -- 
-        \href{https://github.com/ucla-its/network-commute-distance}{github.com/ucla-its/network-commute-distance}} \newline
+        \href{https://github.com/ucla-its/network-commute-distance}{https://github.com/ucla-its/network-commute-distance}} \newline
         \leftright{\textit{Advisor:} Evelyn Blumenberg}{June 2019 - August 2019} \newline
         \textit{Project:} Compare the euclidean distance to the network distance of ordered pairs of 14 million home and work FIPS code destinations \newline
         \textit{Skills Used:} Python, Debugging, docker, jupyter, Documentation Writing
