--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt]{article}
 
 \usepackage{array}
-\usepackage[margin=.15cm]{geometry}
+\usepackage[margin=.2cm]{geometry}
 \usepackage{multirow}
 \usepackage{enumitem}
 \usepackage{hyperref}
@@ -27,7 +27,7 @@
     
         \multicolumn{1}{p{7cm}}{
         \textbf{Name:} David Abraham James \newline
-        \textbf{Cell: } (661) 666-2009 \newline
+        \textbf{Cell: } (661) 857-7102 \newline
         \textbf{Email: } \href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu} \newline
         \textbf{LinkedIn: } \href{https://www.linkedin.com/in/da-james/}{linkedin.com/in/da-james/} \newline
         \textbf{Github: } \href{https://github.com/da-james}{github.com/da-james} \newline
@@ -67,7 +67,7 @@
     \multicolumn{1}{p{1.7cm}}{\textbf{Technical Skills}}   &
         \multicolumn{1}{p{8cm}}{
         \textit{Tools:} Emacs, VIM, Jupyter, terminal, Docker \newline
-        \textit{Advanced Knowledge:} Python, Fortran, Julia \LaTeX \newline
+        \textit{Advanced Knowledge:} Python, Fortran, Julia, \LaTeX \newline
         \textit{Working Knowledge:} C/C++, Microsoft Office \newline
         \textit{Basic Knowledge:} Assembly, Bash \newline
         \textit{Cloud-Based Technologies:} AWS, GCP \newline
