--- a/main.tex
+++ b/main.tex
@@ -323,7 +323,7 @@
         \textbf{Astronomy and Physics Club} \newline
         \leftright{\textit{President}}{Fall 2015 - Spring 2016}
         \begin{itemize}[noitemsep,nolistsep]
-            \item Started and manged club events
+            \item Started and managed club events
             \item Wrote budget proposals
         \end{itemize}
         
