got rid of old information

--- a/main.tex
+++ b/main.tex
@@ -291,87 +291,7 @@
             \item Showed that the Euclidean distance differs on a median of about 3 miles
         \end{itemize}
         
-        \baselineskip} \\ \hline
-    \multicolumn{1}{p{2 cm}}{\textbf{Leadership \newline Experience}}  &
-        \multicolumn{3}{p{16cm}}{
-        \textbf{Triangle Fraternity} \newline
-        \leftright{\textit{House Manager}}{June 2019 - June 2020}
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Coordinated tenants and assigned them living spaces
-            \item Maintained house through repairs
-            \item Called technicians to fix invasive damages
-            \item Tracked a budget of \$24,000 to use for the house
-        \end{itemize}
-        
-        \textbf{Learning Assistant Program: EPSS 71 - Intro to Computing for Geoscience} \newline
-        \leftright{\textit{Learning Assistant}}{Sept 2019 - Dec 2019}
-        \begin{itemize}[noitemsep,nolistsep]
-            \item assisted students with their problems by redirecting the questions and checked for understanding
-            \item urged students to work collaboratively to check code
-            \item created worksheets, so students had more practice with code
-            \item showed students skills in debugging problems themselves when instructors weren't around to help
-            \item brought up concerns students had to TA and instructor
-        \end{itemize}
-        
-        \textbf{UCLA CalGeo} \newline
-        \leftright{\textit{Community Service Chair}}{Fall 2017 - Spring 2018}
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Planned community service events
-            \item Planned public outreach events
-        \end{itemize}
-        
-        \textbf{Astronomy and Physics Club} \newline
-        \leftright{\textit{President}}{Fall 2015 - Spring 2016}
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Started and manged club events
-            \item Wrote budget proposals
-        \end{itemize}
-        
-        \baselineskip}  \\
-    
-    \pagebreak
-        
-    \multicolumn{1}{p{2cm}}{\textbf{Volunteer \newline Experience}}     &
-        \multicolumn{3}{p{16cm}}{
-        \textbf{Northridge Hospital ER} \newline
-        \leftright{\textit{ER Volunteer}}{Fall 2014 - Summer 2016}
-        \begin{itemize}[noitemsep,nolistsep]
-            \item Stocked medical carts with necessary items for nurses
-            \item assisted patients in simple requests of food or calling
-            \item assisted nurses in patient care as directed
-        \end{itemize}
-        \baselineskip} \\ 
-    \multicolumn{1}{p{2cm}}{\textbf{Community \newline Outreach}}       &
-        \multicolumn{3}{p{16cm}}{
-        \textbf{UCLA: Exploring Your Universe} \newline
-        \leftright{\textit{Booth Volunteer}}{Fall 2017 - Fall 2018} \newline
-        \textit{Description:} An annual event hosted by UCLA that had science booths illustrating all types of phenomena
-        \begin{itemize}[noitemsep,nolistsep]
-            \item assisted in setting up booths and running information
-            \item ran science demo for particular group I was associated with that year
-        \end{itemize}
-        
-        \textbf{College of the Canyons: Star Party} \newline
-        \leftright{\textit{Booth Volunteer}}{Fall 2013 - June 2017} \newline
-        \textit{Description:} COC hosted a semester event that had science booths and telescopes set up for families to come and walk around. There would also be a couple guest speakers to present on particular science topics
-        \begin{itemize}[noitemsep,nolistsep]
-            \item assisted in setting up tables and telescopes for workers
-            \item ran science demos and explained phenomena to families
-            \item assisted families around the event
-        \end{itemize}
-        
-        } \\
-    \multicolumn{1}{p{2cm}}{\textbf{Professional \newline Org.}}        &
-    
-        \multicolumn{3}{p{16cm}}{
-            Triangle Fraternity for Engineers, Architects, and Scientists \newline
-            Hermanos Unidos \newline
-            Mathematics, Engineering, Science, Achievement (MESA)
-        } \\
-    
-    \multicolumn{1}{p{2cm}}{\textbf{Interests}}         &
-        \multicolumn{3}{p{16cm}}{
-            Youtuber, salsa dancing, weight-training, Super Smash Bros.(Joker main)}
+        \baselineskip}
 \end{longtable}
 
 
