updated phone number

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
     
         \multicolumn{1}{p{7cm}}{
         \textbf{Name:} David Abraham James \newline
-        \textbf{Cell: } (661) 857-7102 \newline
+        \textbf{Cell: } (323) 628 - 1146 \newline
         \textbf{Email: } \href{mailto:davidabraham@ucla.edu}{davidabraham@ucla.edu} \newline
         \textbf{LinkedIn: } \href{https://www.linkedin.com/in/da-james/}{linkedin.com/in/da-james/} \newline
         \textbf{Github: } \href{https://github.com/da-james}{github.com/da-james} \newline
