updated resume with teaching experience

--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,12 @@
         } \\ \hline
     \multicolumn{1}{p{2 cm}}{\textbf{\vspace{Work \newline Experience}}} &
         \multicolumn{3}{p{16cm}}{
+        \leftright{\textbf{Math Success Program UCLA CPO}}{September 2021 - Present} \newline
+        \textit{Title:} Math Counselor
+        \begin{itemize}[noitemsep,nolistsep]
+            \item assist students in STEM homework and answer questions they have
+        \end{itemize}
+        
         \leftright{\textbf{Jet Propulsion Laboratory (JPL)}}{June 2020 - September 2020} \newline
         \textit{Title:} Student Intern
         \begin{itemize}[noitemsep,nolistsep]
@@ -95,7 +101,7 @@
         \textit{Title:} IT Assistant
         \begin{itemize}[noitemsep,nolistsep]
             \item assisted in building computers for the ITS department along with setting up connections and machines for the Lewis Center
-            \item Help maintain the web servers under the ITS department and fix any bugs that may arise
+            \item Helped maintain the web servers under the ITS department and fix any bugs that may arise
         \end{itemize}
         
         \leftright{\textbf{Atmospheric and Oceanic Department}}{October 2019 - January 2020} \newline
@@ -103,9 +109,9 @@
         \begin{itemize}[noitemsep,nolistsep]
             \item assisting Professor Jasper Kok with translating his course from Matlab to Python
             \begin{itemize}
-                \item re-coding homework assignments
-                \item designing scripts for lecture
-                \item providing any outside resources on coding in Python
+                \item re-coded homework assignments
+                \item designed scripts for lecture
+                \item provided any outside resources on coding in Python
             \end{itemize}
         \end{itemize}
         
@@ -147,6 +153,32 @@
             \item machined fittings for pressure systems
             \item Learned machining and workshop environment
         \end{itemize}
+        
+        \baselineskip} \\
+    \multicolumn{1}{p{2 cm}}{\textbf{\vspace{Teaching \newline Experience}}} &
+        \multicolumn{3}{p{16cm}}{
+        \textbf{EPS SCI 8 - Earthquakes} \newline
+        \leftright{\textit{Title:} Teaching Assistant}{March 2022 - June 2022} \newline
+        \textit{Class Description:} Laboratory, one hour; one field day. Causes and effects of earthquakes. Plate motion, frictional faulting, earthquake instability, wave propagation, earthquake damage, and other social effects. Hazard reduction through earthquake forecasting and earthquake-resistant design.
+        \newline
+        
+        \textbf{EPS SCI 13 - Natural Disasters} \newline
+        \leftright{\textit{Title:} Teaching Assistant}{January 2021 - March 2021} \newline
+        \textit{Class Description:} Discussion, one hour; one field day. Global urbanization together with historical demographic population shift to coastal areas, especially around Pacific Ocean's Ring of Fire, are placing increasingly large parts of this planet's human population at risk due to earthquakes, volcanos, and tsunamis. Global climate change combines with variety of geologic processes to create enhanced risks from catastrophic mass movements (e.g., landslides), hurricanes, floods, and fires. Exploration of physical processes behind natural disasters and discussion of how these natural events affect quality of human life.
+        \newline
+        
+        \textbf{EPS SCI 8 - Earthquakes} \newline
+        \leftright{\textit{Title:} Teaching Assistant}{September 2020 - December 2020} \newline
+         \newline
+        
+        \textbf{EPS SCI 171 - Advanced Computing in Geoscience} \newline
+        \leftright{\textit{Title:} Lab Assistant}{January 2020 - March 2020} \newline
+        \textit{Class Description:} Use of high level computing language to program microcontrollers to acquire laboratory-style experimental data. Misfit modeling and quantitative comparisons of acquired data sets and theory. Forward modeling from fundamental equations. Examples, experiments, and exercises from disciplines within geosciences.
+        \newline
+        
+        \textbf{EPS SCI 71 - Introduction to Computing in Geoscience} \newline
+        \leftright{\textit{Title:} Learning Assistant}{September 2019 - December 2019} \newline
+        \textit{Class Description:} Introduction to writing programs, visualization of geoscience data, and comparison with models.
         
         \baselineskip} \\
     \multicolumn{1}{p{2 cm}}{\textbf{\vspace{Project \newline Experience}}} &
@@ -261,7 +293,7 @@
         
         \textbf{DIYnamics: DIYrotate -- 
         \href{https://github.com/DIYnamics/DIYrotate}{https://github.com/DIYnamics/DIYrotate}} \newline
-        \leftright{\textit{Advisor:} Jon Aurnou}{July 2019 - Present} \newline
+        \leftright{\textit{Advisor:} Jon Aurnou}{July 2019 - March 2020} \newline
         \textit{Project:} Digitally rotates a movie and allows for single-particle tracking. Originally designed to intuitively show Coriolis force effects by the appearance of inertial circles when digitally rotating film of a ball oscillating on a parabolic surface. \newline
         \textit{Skills Used:} Python, Debugging, Documentation Writing
         \begin{itemize}[noitemsep,nolistsep]
@@ -269,7 +301,7 @@
             \item Debugging OpenCV package implemented in design
         \end{itemize}
         
-        \textbf{EPSS 199: Directed Research} \newline
+        \textbf{EPS SCI 199: Directed Research} \newline
         \leftright{\textit{Advisor:} Lars Stixrude}{June 2019 - August 2019} \newline
         \textit{Project:} Created a model that simulated a silicate planet's mass and radius with a initial parameters and equations \newline
         \textit{Skills Used:} Python, Fortran, Debugging, Documentation Writing
